--- a/junaidfile.html
+++ b/junaidfile.html
@@ -184,7 +184,7 @@ max-width: 150px;
         
         <div class="header-inner">
             <div class="photo">
-                <img src="dark.png" alt="photo"></div>
+                <img src="https://firebasestorage.googleapis.com/v0/b/amoga-2e85c.appspot.com/o/logo7-removebg-preview.png?alt=media&token=2ab51bd7-6c3b-4846-aa93-ab3fb55cfa28" alt="photo"></div>
             <div class="navgation">
             <ul>
                 <ul>
@@ -210,7 +210,7 @@ max-width: 150px;
         <div class="container-inner">
           <div class="picc">
             <img
-              src="dpd.jpeg"
+              src="https://firebasestorage.googleapis.com/v0/b/amoga-2e85c.appspot.com/o/dpd.jpeg?alt=media&token=5893cb2c-3842-4ecf-9f1b-c0a021bc2e4c"
               alt=""
               width="100%" />
           </div>
